--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,8 +10,8 @@ jobs:
   build:
 
     runs-on: 
-      group: public-gpu
-      labels: linux-gpu-t4
+      group: gpu-group
+      labels: gpu-test-runner
     container:
       image: beehivelab/tornadovm-nvidia-openjdk:1.0.6
     permissions:
