--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,9 +10,7 @@ on:
 jobs:
   build:
 
-    runs-on: 
-      group: public-gpu
-      labels: linux-gpu-t4
+    runs-on: small-runner
     container:
       image: beehivelab/tornadovm-nvidia-openjdk:1.0.6
     permissions:
