--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,6 +17,11 @@ jobs:
       contents: read
 
     steps:
+    - name: Update Node
+      run: |
+        sudo apt-get remove nodejs
+        nvm install 16.15.1
+        
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
 
