--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,10 +17,10 @@ jobs:
       contents: read
 
     steps:
-    - name: Update Node
-      run: |
-        apt-get remove nodejs
-        nvm install 16.15.1
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
         
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
