--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,9 +17,9 @@ jobs:
       contents: read
 
     steps:
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
+    # - uses: actions/setup-node@v4
+    #   with:
+    #     node-version: 20
         
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
