--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,20 +9,28 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-20.04
+  
+    runs-on: ubuntu-latest
     container:
       image: beehivelab/tornadovm-nvidia-openjdk:1.0.6
     permissions:
       contents: read
 
     steps:
-    # - uses: actions/setup-node@v4
-    #   with:
-    #     node-version: 20
+    - name: Checkout sources
+      uses: actions/checkout@v4
+      
+    - name: Setup Java
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: 21
         
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
+      
+    - name: Build with Gradle
+      run: ./gradlew build
 
     - name: Build with Gradle Wrapper
       run: ./gradlew -Pbabylonml.tornadovm.home=/tornado/tornado/bin/sdk build
