--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,9 +17,12 @@ jobs:
       contents: read
 
     steps:
+
+    - name: Checkout sources
+      uses: actions/checkout@v3
       
     - name: Setup Java
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
         java-version: 21
