--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
   
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     container:
       image: beehivelab/tornadovm-nvidia-openjdk:1.0.6
     permissions:
@@ -25,7 +25,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
-        java-version: 21
+        java-version: 17
         
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
